# NovaStream

./: .dockerignore  .env.example  .gitignore  AUTHORS  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS  CREDITS.md  Dockerfile  LICENSE  PROJECT.toml  Procfile  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/api/: reference.md
docs/architecture/: auth.md  data-model.md  feature-flags.md  overview.md  search.md  storage.md  streaming.md
docs/design-log/: README.md  architecture-design-phase1-v2.md  architecture-design-phase1-v3.md  architecture-design-phase1.md  open-source-project-structure.md
docs/guides/: coding-standards.md  contributing.md  deployment.md  performance.md  plugin-development.md  theme-development.md
miniapp/: .env.example  README.md  index.html  package.json  tailwind.config.js  vite.config.ts
miniapp/src/: App.tsx  index.css  types.ts
miniapp/src/components/: BottomNav.tsx  Feedback.tsx  Header.tsx  MediaCard.tsx
miniapp/src/lib/: api-client.ts  navigation.ts  telegram.ts
miniapp/src/pages/: BrowsePage.tsx  MediaDetailsPage.tsx  PlayerPage.tsx  SearchPage.tsx
miniapp/src/player/: VideoPlayer.tsx
src/media_platform/: __init__.py  config.py  lifecycle.py  logging_setup.py  server.py
src/media_platform/cache/: __init__.py  ttl_cache.py
src/media_platform/domain/: __init__.py  errors.py  interfaces.py  models.py
src/media_platform/kernel/: __init__.py  api_router.py  callback_registry.py  command_registry.py  model_registry.py  plugin.py  plugin_manager.py  provider_registry.py  scheduler.py  service_locator.py  settings_registry.py
src/media_platform/plugins/: __init__.py
src/media_platform/plugins/features/: __init__.py
src/media_platform/plugins/providers/: __init__.py
src/media_platform/services/: __init__.py  auth_helper.py  catalog_service.py  feature_flags.py  history_service.py  playback_service.py  range_parsing.py  stream_tokens.py
tests/: conftest.py
tests/integration/: README.md
tests/unit/: test_bootstrap.py  test_catalog_grouping.py  test_catalog_search_plugin.py  test_continue_watching_plugin.py  test_feature_flags.py  test_genre_browsing_plugin.py  test_mongo_codecs.py  test_plugin_manager.py  test_provider_registry.py  test_range_parsing.py  test_storage_telegram_client.py  test_stream_tokens.py  test_streaming_plugin.py  test_streaming_signed_provider.py  test_ttl_cache.py
(+38 files in other folders)
